# krab-dev

./: .gitignore  Cargo.toml  README.md  Syntax.md
kotlin-ast/: Cargo.toml
kotlin-ast/src/: block.rs  decl.rs  expr.rs  file.rs  lib.rs  stmt.rs
kotlin-codegen/: Cargo.toml
kotlin-codegen/src/: lib.rs
kotlin-error/: Cargo.toml
kotlin-hir/: Cargo.toml
kotlin-hir/src/: hir.rs  lib.rs  visitor.rs
kotlin-lexer/: Cargo.toml
kotlin-lexer/src/: cursor.rs  lib.rs  unescape.rs
kotlin-llvm/: Cargo.toml
kotlin-llvm/src/: main.rs
kotlin-parse/: Cargo.toml
kotlin-parse/src/: block.rs  decl.rs  errors.rs  expr.rs  file.rs  lib.rs  stmt.rs  stream.rs
kotlin-span/: Cargo.toml
kotlin-span/src/: lib.rs  package.rs  symbol.rs
krab-codegen/: Cargo.toml  test.krab
krab-codegen/src/: main.rs
krab-lowering/: Cargo.toml
krab-lowering/src/: block.rs  expr.rs  lib.rs  stmt.rs
krab-tir/: Cargo.toml
krab-tir/src/: block.rs  expr.rs  lib.rs  stmt.rs  ty.rs
