[package]
name = "kotlin-llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.2"
llvm-sys = { version = "160", features = [] }
kotlin-parse = { path = "../kotlin-parse" }
kotlin-ast = { path = "../kotlin-ast" }
kotlin-span = { path = "../kotlin-span" }
